<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Logger" Id="{047a20cc-a785-4614-8465-ede098785b35}">
    <Declaration><![CDATA[{attribute 'qualified only'}
//Global variables for logging to syslog
VAR_GLOBAL CONSTANT
	csNILVALUE	:	STRING(1) := '-'; //Syslog standard placeholder/ blank
	{attribute 'analysis' := '-33'} //This is used just below in decl. of asLoggerMesgBuffer
	cnLoggerMesgArraySize : INT := 50; //Size of the Logger buffer
	// Syslog Version
	cnSyslogVer: WORD := 1; //Logger written to work with Syslog V1
END_VAR
VAR_GLOBAL
	asLoggerMesgBuffer	:	ARRAY [0..cnLoggerMesgArraySize] OF T_MaxString; //Logger message buffer, FB_LogMessage puts messages in here for FB_Logger to send out
	gsCurrentTime	:	T_MaxString := csNILVALUE; //For timestamping messages
	gsHostName	:	T_MaxString := csNILVALUE; //Hostname used for log messages
	{analysis -33}
	fbRootLogger : FB_LogMessage; //Instantiated here to be used everywhere
	{analysis +33}
	fbLoggerBuffer 			:	FB_StringRingBuffer; //For working with the Logger message buffer
	
	//Note: FB_Logger is not declared here as it needs to be integrated into each project manually. See FB comment for more info.
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>