<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_LogMessage" Id="{fe506c1b-49fd-40e1-9f69-3fdf525bddb1}" SpecialFunc="None">
    <Declaration><![CDATA[// LogMessage
// A Wallace, 18-4-12
// Adds a message to the global queue to be sent to the syslog server
(* 
For reference, the logstash pattern SYSLOG5424LINE will be used to grok the generated syslog-5424 message.

	 SYSLOG5424PRI <%{NONNEGINT:syslog5424_pri}>
	 SYSLOG5424SD \[%{DATA}\]+
	 SYSLOG5424BASE %{SYSLOG5424PRI}%{NONNEGINT:syslog5424_ver} +(?:%{TIMESTAMP_ISO8601:syslog5424_ts}|-) +(?:%{IPORHOST:syslog5424_host}|-) 
					+(-|%{SYSLOG5424PRINTASCII:syslog5424_app}) +(-|%{SYSLOG5424PRINTASCII:syslog5424_proc}) 
					+(-|%{SYSLOG5424PRINTASCII:syslog5424_msgid}) +(?:%{SYSLOG5424SD:syslog5424_sd}|-|)
	 SYSLOG5424LINE %{SYSLOG5424BASE} +%{GREEDYDATA:syslog5424_msg}

This could be summarized as:

	<PRI> VER TIMESTAMP/- IPorHOST/- APP/- PROC/- MSGID/- SD/- MESSAGE

where dash '-' is used as the "nil value" or `csNILVALUE` here.
*)

{attribute 'reflection'}
FUNCTION_BLOCK FB_LogMessage
VAR_INPUT	
	i_sMsg	:	STRING; //Message to send
	i_eSevr	:	E_MesgSevr; //Message severity
	i_eSubsystem	:	E_Subsystem; //In-lieu of App-name in the RFC-5424
END_VAR
VAR
	fbFormatString		:	FB_FormatString; //String formatter
	sPRIVAL				: 	T_MaxString := csNILVALUE; //Priority value
	{attribute 'instance-path'}
	{attribute 'noinit'}
	sPID				: 	T_MaxString; //PID -> changed to instance path
	sSubsystem			: 	T_MaxString := csNILVALUE; //Type of subsystem for organizing in syslog later
	nSyslogVer			: 	WORD := cnSyslogVer; //Version of syslog
	sMsg				: 	T_MaxString := csNILVALUE; //Message to send
	sMsgID				: 	T_MaxString := csNILVALUE; // Message ID
	fbEventLogger		: 	FB_MessageToEventLogger;
END_VAR
VAR CONSTANT
	casSubsystems	:	ARRAY [0..5] OF STRING := ['-', 'VACUUM', 'MPS', 'MOTION', 'FIELDBUS', 'SDS']; //LCLS defined subsystems for global logging
	cnFacility: WORD := 20; // local4
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbLoggerBuffer.putValue := '';
fbLoggerBuffer.pBuffer := ADR(asLoggerMesgBuffer); //Global buffer address
fbLoggerBuffer.cbBuffer := UINT_TO_UDINT(SIZEOF(asLoggerMesgBuffer));

fbFormatString.sFormat := '<%s>%d %s %s %s %s %s - %s';

sPRIVAL := LEFT( WORD_TO_STRING(cnFacility * 8 + i_eSevr), 5);
sSubsystem := casSubsystems[i_eSubsystem];
nSyslogVer := cnSyslogVer;
sMsg := i_sMsg;

//bad language ahead, sorry
fbFormatString.arg1 := F_STRING(sPRIVAL); 			// <PRI>
fbFormatString.arg2 := F_WORD(nSyslogVer);			// VER
fbFormatString.arg3 := F_STRING(gsCurrentTime);		// TIMESTAMP
fbFormatString.arg4 := F_STRING(gsHostName);		// IPorHOST/-
fbFormatString.arg5 := F_STRING(sSubsystem);		// APP/-
fbFormatString.arg6 := F_STRING(sPID);				// PROC/-
fbFormatString.arg7 := F_STRING(sMsgID);			// MSGID/-
fbFormatString.arg8 := F_STRING(sMsg);				// MESSAGE
fbFormatString( sOut=>fbLoggerBuffer.putValue);
fbLoggerBuffer.A_AddTail();

// Also send the message to the event logger:
fbEventLogger(i_sMsg:=sMsg, i_eSevr:=i_eSevr, i_eSubsystem:=i_eSubsystem, i_sPath:=sPID);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>